osd: Remove bogus assert and update missing_loc for mark_all_unfound_lost()

Fixes: http://tracker.ceph.com/issues/18165

Signed-off-by: David Zafman <dzafman@redhat.com>