src/osd/ReplicatedPG.cc
@@ -1961,7 +1961,7 @@ void ReplicatedPG::do_op(OpRequestRef& op)
       fill_in_copy_get_noent(op, oid, m->ops[0], classic);
       return;
     }
-    dout(20) << __func__ << "find_object_context got error " << r << dendl;
+    dout(20) << __func__ << ": find_object_context got error " << r << dendl;
     osd->reply_op_error(op, r);
     return;
   }
@@ -9687,7 +9687,6 @@ eversion_t ReplicatedPG::pick_newest_available(const hobject_t& oid)
     if (*i == get_primary()) continue;
     pg_shard_t peer = *i;
     if (!peer_missing[peer].is_missing(oid)) {
-      assert(is_backfill_targets(peer));
       continue;
     }
     eversion_t h = peer_missing[peer].missing[oid].have;
@@ -9817,6 +9816,7 @@ void ReplicatedPG::mark_all_unfound_lost(
   ceph_tid_t tid)
 {
   dout(3) << __func__ << " " << pg_log_entry_t::get_op_name(what) << dendl;
+  list<hobject_t> oids;
 
   dout(30) << __func__ << ": log before:\n";
   pg_log.get_log().print(*_dout);
@@ -9882,6 +9882,7 @@ void ReplicatedPG::mark_all_unfound_lost(
 	} // otherwise, just do what we used to do
 	dout(10) << e << dendl;
 	log_entries.push_back(e);
+        oids.push_back(oid);
 
 	++m;
       }
@@ -9918,7 +9919,9 @@ void ReplicatedPG::mark_all_unfound_lost(
     log_entries,
     std::move(manager),
     boost::optional<std::function<void(void)> >(
-      [=]() {
+      [this, oids, con, num_unfound, tid]() {
+	  for (auto oid: oids)
+	    missing_loc.recovered(oid);
 	requeue_ops(waiting_for_all_missing);
 	waiting_for_all_missing.clear();
 	requeue_object_waiters(waiting_for_unreadable_object);
